--- a/gradle.properties
+++ b/gradle.properties
@@ -23,3 +23,8 @@ kotlin.code.style=official
 android.nonTransitiveRClass=true
 android.defaults.buildfeatures.buildconfig=true
 android.nonFinalResIds=false
+
+org.gradle.configureondemand=true
+org.gradle.daemon=true
+org.gradle.parallel=true
+org.gradle.workers.max=12
